refactor: db and rest